fix create node class in test